updated the layout of information on the details page.

--- a/views/books/bookDetails.ejs
+++ b/views/books/bookDetails.ejs
@@ -160,11 +160,13 @@
                     <p class="description"><%= book.description %></p>
                     <div class="clearfix">
                       <div class="price pull-left"><b>Price: </b><%= book.price %></div>
+                      <div class="price pull-left"><b> Genre: </b><%= book.genre %></div>
+                      <div class="price pull-left"><b> release date: </b><%= book.publishDate %></div>
                         <br>About the author:</br>
                         <p>
                           <% authors.forEach(author => { %> <% if (author.id == book.author){ %>
                           <%= author.bio %> <% } }) %>
-                          </p>
+                        </p>
                         
                       <div class="pull-right">
                           <form id="rating-form" method="post" class="rating" action="/books/rate/<%=book.id%>">
