--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -61,65 +61,70 @@
   </div>
 </div>-->
 </head>
+
 <body>
 
-<div class="dropdown">
-    <button onclick = "myFunction()" class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="false" aria-expanded="false">
-        Filter by
-      </button>
-  <div class="dropdown-content">
-    <a href="/books/show-books/Fantasy/">Fantasy</a>
-    <a href="/books/show-books/Romance/">Romance</a>
-    <a href="/books/show-books/Horror/">Horror</a>
-    <a href="/books/show-books/0star/">Unrated</a>
-    <a href="/books/show-books/1star/"><span>&#x2605;</span></a>
-    <a href="/books/show-books/2star/"><span>&#x2605;&#x2605;</span></a>
-    <a href="/books/show-books/3star/"><span>&#x2605;&#x2605;&#x2605;</span></a>
-    <a href="/books/show-books/4star/"><span>&#x2605;&#x2605;&#x2605;&#x2605;</span></a>
-    <a href="/books/show-books/5star/"><span>&#x2605;&#x2605;&#x2605;&#x2605;&#x2605;</span></a>
+  <div class="dropdown">
+    <button onclick="myFunction()" class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+      data-toggle="dropdown" aria-haspopup="false" aria-expanded="false">
+      Filter by
+    </button>
+    <div class="dropdown-content">
+      <a href="/books/show-books/Fantasy/">Fantasy</a>
+      <a href="/books/show-books/Romance/">Romance</a>
+      <a href="/books/show-books/Horror/">Horror</a>
+      <a href="/books/show-books/0star/">Unrated</a>
+      <a href="/books/show-books/1star/"><span>&#x2605;</span></a>
+      <a href="/books/show-books/2star/"><span>&#x2605;&#x2605;</span></a>
+      <a href="/books/show-books/3star/"><span>&#x2605;&#x2605;&#x2605;</span></a>
+      <a href="/books/show-books/4star/"><span>&#x2605;&#x2605;&#x2605;&#x2605;</span></a>
+      <a href="/books/show-books/5star/"><span>&#x2605;&#x2605;&#x2605;&#x2605;&#x2605;</span></a>
+    </div>
   </div>
-</div>
 </body>
 
-<div class ="w-25 p-3">
-  <ul class ="list-group list-group-horizontal">
+<div class="w-25 p-3">
+  <ul class="list-group list-group-horizontal">
     <% books.forEach(function(book) { %>
-    <li class ="list-group-item">
+    <li class="list-group-item">
       <a href="/books/<%= book._id %>">
-      <div class ="text-center">
-        <img height="150" width="100" src="<%= book.coverImagePath %>" />
-      </div>
-      <div class ="text-center" data-rows=3>
-        <%= book.title %>
-      </div>
+        <div class="text-center">
+          <img height="150" width="100" src="<%= book.coverImagePath %>" />
+        </div>
+        <div class="text-center mt-2" data-rows=3>
+          <strong><%= book.title %></strong>
+        </div>
       </a>
-      <div class ="text-center" data-rows=2>
+      <div class="text-center mt-3" data-rows=2>
         <% authors.forEach(author => { %> <% if (author.id == book.author){ %>
-          <%= author.name %> <% } }) %>
+        <%= author.name %> <% } }) %>
       </div>
-      <div class ="text-center">
+      <div class="text-center mt-3">
         <% if(book.rating === 1){ %>
-          <span>&#x2605;</span>
+        <span>&#x2605;</span>
         <% }if(book.rating === 2){ %>
-          <span>&#x2605;&#x2605;</span>
+        <span>&#x2605;&#x2605;</span>
         <% }if(book.rating === 3){ %>
-          <span>&#x2605;&#x2605;&#x2605;</span>
+        <span>&#x2605;&#x2605;&#x2605;</span>
         <% }if(book.rating === 4){ %>
-          <span>&#x2605;&#x2605;&#x2605;&#x2605;</span>
+        <span>&#x2605;&#x2605;&#x2605;&#x2605;</span>
         <% }if(book.rating === 5){ %>
-          <span>&#x2605;&#x2605;&#x2605;&#x2605;&#x2605;</span>
+        <span>&#x2605;&#x2605;&#x2605;&#x2605;&#x2605;</span>
         <% } %>
       </div>
-      <div class ="text-center">
+      <div class="text-center">
         <%= book.price %>
       </div>
-      <div class ="text-center">
-        <a href="/wishlist/<%= book._id %>/5da7c89a68ab8d0f8887d0cf/1"
-            >Add to Wishlist</a><br>
-             <a href="/wishlist/<%= book._id %>/5da7c89a68ab8d0f8887d0cf/2"
-            >Add to Wishlist 2</a><br>
-             <a href="/wishlist/<%= book._id %>/5da7c89a68ab8d0f8887d0cf/3"
-            >Add to Wishlist 3</a> 
+      <div class="text-center mt-4">
+        <h6>
+          <a href="/wishlist/<%= book._id %>/5da7c89a68ab8d0f8887d0cf/1">Add to Wishlist 1</a>
+        </h6>
+        <h6>
+          <a href="/wishlist/<%= book._id %>/5da7c89a68ab8d0f8887d0cf/2">Add to Wishlist 2</a>
+        </h6>
+        <h6>
+          <a href="/wishlist/<%= book._id %>/5da7c89a68ab8d0f8887d0cf/3">Add to Wishlist 3</a>
+        </h6>
       </div>
     </li>
     <% }); %>
@@ -140,39 +145,44 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-.dropbtn {
-  background-color: #4CAF50;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-}
+  .dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+  }
 
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
 
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+  }
 
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
 
-.dropdown-content a:click {background-color: rgb(221, 221, 221);}
+  .dropdown-content a:click {
+    background-color: rgb(221, 221, 221);
+  }
 
-.dropdown:hover .dropdown-content {display: block;}
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
 
-.dropdown:hover .dropbtn {background-color: #3e8e41;}
-
+  .dropdown:hover .dropbtn {
+    background-color: #3e8e41;
+  }
 </style>
