Added report for wishlist

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
-<h2>All Books</h2>
-<div>
+<h2 class="ml-5">All Books</h2>
+<div class="ml-5">
     <% books.forEach(function(book) { %>
         <a href="/books/<%= book.id%>">
             <img height="150" width="100" src="<%= book.coverImagePath %>">
