--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -1,4 +1,4 @@
-<h2>All Books</h2>
+<h2 class="ml-5">All Books</h2>
 <!-- <div>
   <table id="book table" class="display" style="width:100%">
     <thead>
@@ -64,23 +64,23 @@
 
 <body>
 
-  <div class="dropdown">
-    <button onclick="myFunction()" class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
-      data-toggle="dropdown" aria-haspopup="false" aria-expanded="false">
-      Filter by
-    </button>
-    <div class="dropdown-content">
-      <a href="/books/show-books/Fantasy/">Fantasy</a>
-      <a href="/books/show-books/Romance/">Romance</a>
-      <a href="/books/show-books/Horror/">Horror</a>
-      <a href="/books/show-books/0star/">Unrated</a>
-      <a href="/books/show-books/1star/"><span>&#x2605;</span></a>
-      <a href="/books/show-books/2star/"><span>&#x2605;&#x2605;</span></a>
-      <a href="/books/show-books/3star/"><span>&#x2605;&#x2605;&#x2605;</span></a>
-      <a href="/books/show-books/4star/"><span>&#x2605;&#x2605;&#x2605;&#x2605;</span></a>
-      <a href="/books/show-books/5star/"><span>&#x2605;&#x2605;&#x2605;&#x2605;&#x2605;</span></a>
+    <div class="dropdown ml-5">
+      <button onclick="myFunction()" class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+        data-toggle="dropdown" aria-haspopup="false" aria-expanded="false">
+        Filter by
+      </button>
+      <div class="dropdown-content">
+        <a href="/books/show-books/Fantasy/">Fantasy</a>
+        <a href="/books/show-books/Romance/">Romance</a>
+        <a href="/books/show-books/Horror/">Horror</a>
+        <a href="/books/show-books/0star/">Unrated</a>
+        <a href="/books/show-books/1star/"><span>&#x2605;</span></a>
+        <a href="/books/show-books/2star/"><span>&#x2605;&#x2605;</span></a>
+        <a href="/books/show-books/3star/"><span>&#x2605;&#x2605;&#x2605;</span></a>
+        <a href="/books/show-books/4star/"><span>&#x2605;&#x2605;&#x2605;&#x2605;</span></a>
+        <a href="/books/show-books/5star/"><span>&#x2605;&#x2605;&#x2605;&#x2605;&#x2605;</span></a>
+      </div>
     </div>
-  </div>
 </body>
 
 <div class="w-25 p-3">
@@ -91,15 +91,15 @@
         <div class="text-center">
           <img height="150" width="100" src="<%= book.coverImagePath %>" />
         </div>
-        <div class="text-center mt-2" data-rows=3>
+        <div class="text-center" data-rows=3>
           <strong><%= book.title %></strong>
         </div>
       </a>
-      <div class="text-center mt-3" data-rows=2>
+      <div class="text-center mt-5" data-rows=2>
         <% authors.forEach(author => { %> <% if (author.id == book.author){ %>
         <%= author.name %> <% } }) %>
       </div>
-      <div class="text-center mt-3">
+      <div class="text-center ">
         <% if(book.rating === 1){ %>
         <span>&#x2605;</span>
         <% }if(book.rating === 2){ %>
@@ -115,16 +115,10 @@
       <div class="text-center">
         <%= book.price %>
       </div>
-      <div class="text-center mt-4">
-        <h6>
-          <a href="/wishlist/<%= book._id %>/5da7c89a68ab8d0f8887d0cf/1">Add to Wishlist 1</a>
-        </h6>
-        <h6>
-          <a href="/wishlist/<%= book._id %>/5da7c89a68ab8d0f8887d0cf/2">Add to Wishlist 2</a>
-        </h6>
-        <h6>
-          <a href="/wishlist/<%= book._id %>/5da7c89a68ab8d0f8887d0cf/3">Add to Wishlist 3</a>
-        </h6>
+      <div class="text-center mt-5">
+        <h6><a href="/wishlist/<%= book._id %>/5da7c89a68ab8d0f8887d0cf/1">Add to Wishlist 1</a></h6>
+        <h6><a href="/wishlist/<%= book._id %>/5da7c89a68ab8d0f8887d0cf/2">Add to Wishlist 2</a></h6>
+        <h6><a href="/wishlist/<%= book._id %>/5da7c89a68ab8d0f8887d0cf/3">Add to Wishlist 3</a></h6>
       </div>
     </li>
     <% }); %>
@@ -138,6 +132,7 @@
     <li><a href="2">2</a></li>
   </ul>
 </div>
+
 
 <!--CSS styling for dropdown menu-->
 <!DOCTYPE html>
